--- a/html/astrology/astrology.html
+++ b/html/astrology/astrology.html
@@ -837,6 +837,9 @@
        In essence, your birth chart is a multidimensional map, revealing the intricate layers of your being.
             So, the next time someone asks, "What's your sign?" you can confidently say, "I'm more than just my sun sign; I'm a cosmic masterpiece, intricately woven with the threads of the universe." Dive deeper, explore your birth chart, and unlock the wonders of your true self.
       </p>
+      <div class="content-img left">
+       <img alt="Cathy Green" src="/img/astrology/astrology/cathy_green_web.png"/>
+      </div>
       <h2>
        Explore Your Unique Astrological Blueprint
       </h2>
