--- a/html/graphology/graphology.html
+++ b/html/graphology/graphology.html
@@ -411,6 +411,9 @@
        Embark on this transformative journey of self-discovery.
              Discover the hidden facets of your personality, unravel the mysteries of your subconscious mind, and explore the archetypes that shape your being.
              Whether you're seeking individual insights or planning your next party or corporate event, let the magic of handwriting analysis add a touch of fascination and intrigue.
+       <div class="content-img left">
+        <img alt="Cathy Green" src="/img/graphology/graphology/cathy_green_web.png"/>
+       </div>
        <h2>
         Individual Handwriting Analysis
        </h2>
