--- a/hypnosis/about_hypnosis.html
+++ b/hypnosis/about_hypnosis.html
@@ -325,12 +325,9 @@
             your maximum benefit.  You do hypnosis all of the time, you are good at it.  
             Are you ready to use hypnosis to improve your life?
       </p>
-      <figure class="content-img caption left">
-       <img alt="Cathy Green in a Hypnosis Session" src="/img/hypnosis/about_hypnosis/cathy_hypnosis_web.png"/>
-       <figcaption>
-        Cathy Green in a Hypnosis Session
-       </figcaption>
-      </figure>
+      <div class="content-img right">
+       <img alt="What Does Hypnosis Feel Like?" src="/img/hypnosis/about_hypnosis/recliner.png"/>
+      </div>
       <h1>
        What Does Hypnosis Feel Like?
       </h1>
@@ -346,7 +343,7 @@
       <h1>
        How Can I Use Hypnosis to Help Me?
       </h1>
-      <div class="content-img right up15">
+      <div class="content-img left up15">
        <img alt="Change Old Habits" src="/img/hypnosis/about_hypnosis/old_habits_change.png"/>
       </div>
       <p>
